# 2man-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install_precommit.sh  settings.json
.github/workflows/: ci.yml
cmake/: clang-cxx-dev-tools.cmake
meta/: settings.json
meta/keybinds/: supported_keybinds.ini
src/: CMakeLists.txt  action.hpp  bitmask.cpp  bitmask.hpp  common.hpp  controller.hpp  debug.hpp  engine.cpp  engine.hpp  engine_context.hpp  input.hpp  input_system.hpp  keyboard.hpp  main.cpp  mouse.cpp  mouse.hpp  non_copyable.hpp  resource_cache.hpp  resources.hpp  settings.hpp  state.hpp  state_base.hpp  state_stack.cpp  state_stack.hpp  textures.cpp  window_context.hpp
src/core/: lua_context.hpp
src/core/engine/: engine.hpp
src/core/input/: input_system.hpp  keyboard.hpp
src/core/structures/: bitmask.hpp
src/ecs/: components.hpp  ecs.hpp  ecs_all.hpp  entity_capture.cpp  entity_capture.hpp
src/ecs/archetypes/: button.hpp  entity_object.hpp  lamp.hpp  player.hpp
src/ecs/core/: component.cpp  component.hpp  component_pool.cpp  component_pool.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
src/ecs/systems/: rendering_button.hpp  rendering_system.hpp  system_base.hpp  systems.hpp  vicinity_system.hpp
src/engine/: lua_context.hpp
src/engine/common/: common.hpp
src/engine/controller/: controller.hpp
src/engine/core/: engine.cpp  engine.hpp  engine_context.hpp
src/engine/ecs/: action.hpp  components.hpp  ecs.hpp  entity_capture.hpp
src/engine/ecs/archetypes/: button.hpp  drop_down_button.hpp  entity_object.hpp  player.hpp
src/engine/ecs/core/: component.cpp  component.hpp  component_pool.cpp  component_pool.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
src/engine/ecs/systems/: hitbox_system.hpp  physics_system.hpp  rendering_button.hpp  rendering_system.hpp  system_base.hpp  systems.hpp  vicinity_system.hpp
src/engine/input/: input_system.hpp  keyboard.hpp
src/engine/map/: layer.cpp  layer.hpp  map.hpp  tile.hpp  tile_map.hpp  tile_type.hpp
src/engine/resource/: resource_cache.hpp  resources.hpp
src/engine/settings/: settings.hpp
src/engine/states/: game_state.hpp  menu_state.hpp  state.hpp  state_base.hpp  state_stack.hpp  title_state.hpp
src/engine/structures/: Vec2D.hpp  bitmask.hpp
src/engine/utility/: math.hpp
src/map/: layer.cpp  layer.hpp  map.hpp  tile.hpp  tile_type.hpp
src/states/: game_state.hpp  menu_state.hpp  state.hpp  state_base.hpp  state_stack.hpp  title_state.hpp
src/structures/: Vec2D.hpp
